--- a/app/(legal)/privacy-policy/page.mdx
+++ b/app/(legal)/privacy-policy/page.mdx
@@ -1,40 +1,40 @@
-# Privacy Policy for Cross Designs
+# Privacy Policy for TurboLearn
 
 ## Introduction
 
-Welcome to Cross Designs, the AI-powered cross design generator that helps you create beautiful and meaningful cross artwork. At Cross Designs, your privacy is of utmost importance to us, and this privacy policy outlines how we collect, use, and protect your personal information when you use our services.
+Welcome to TurboLearn, the AI-powered learning assistant that helps you create concise notes and clear diagrams from your study materials. At TurboLearn, your privacy is of utmost importance to us, and this privacy policy outlines how we collect, use, and protect your personal information when you use our services.
 
 ## Information Collection and Use
 
-We collect the following types of data to provide you with a better experience while using Cross Designs:
+We collect the following types of data to provide you with a better experience while using TurboLearn:
 
 1. **Account Information**
 
    - **What We Collect**: This includes your name, email address, and any other information you provide when creating an account.
    - **Purpose**: To manage your account and provide customer support.
 
-2. **Design Data**
+2. **Learning Materials and Generated Content**
 
-   - **What We Collect**: Information about your cross designs, including style preferences, customization choices, and generated artwork.
-   - **Purpose**: To provide and improve our AI design generation services.
+   - **What We Collect**: Information about your uploaded study materials, generated notes, diagrams, and customization preferences.
+   - **Purpose**: To provide and improve our AI note and diagram generation services.
 
 3. **Usage Details**
 
-   - **What We Collect**: Information about how you use Cross Designs, including features accessed and design generation frequency.
-   - **Purpose**: To analyze user engagement and improve our services.
+   - **What We Collect**: Information about how you use TurboLearn, including features accessed and content generation frequency.
+   - **Purpose**: To analyze user engagement and improve our learning tools.
 
 4. **Device Information**
 
-   - **What We Collect**: Data regarding the devices you use to access Cross Designs, such as device type, operating system, and browser type.
+   - **What We Collect**: Data regarding the devices you use to access TurboLearn, such as device type, operating system, and browser type.
    - **Purpose**: To optimize our services for different devices and ensure compatibility.
 
 5. **Payment and Billing Information**
    - **What We Collect**: Information regarding your payment methods, such as credit card number, billing address, and transaction details.
-   - **Purpose**: To process payments for our premium design services.
+   - **Purpose**: To process payments for our premium learning services.
 
 ## Data Storage and Security
 
-We take the security of your personal information seriously. The data we collect is stored securely on our servers, and we implement various security measures including encryption and access controls to protect against unauthorized access, alteration, disclosure, or destruction of your personal information and design data.
+We take the security of your personal information seriously. The data we collect is stored securely on our servers, and we implement various security measures including encryption and access controls to protect against unauthorized access, alteration, disclosure, or destruction of your personal information and learning materials.
 
 ## Information Sharing and Disclosure
 
@@ -53,6 +53,6 @@ We may update this privacy policy from time to time. We will notify you of any c
 If you have any questions or concerns about this privacy policy or our data practices, please contact us at:
 
 **Email**: [cms18923587457@gmail.com](mailto:cms18923587457@gmail.com)  
-**Website**: [crossdesigns.net](https://crossdesigns.net)
+**Website**: [turbo-learn.com](https://turbo-learn.com)
 
-By using Cross Designs, you consent to our privacy policy and agree to its terms. Thank you for trusting us with your information!
+By using TurboLearn, you consent to our privacy policy and agree to its terms. Thank you for trusting us with your information!
