--- a/app/(legal)/terms-of-service/page.mdx
+++ b/app/(legal)/terms-of-service/page.mdx
@@ -2,11 +2,11 @@
 
 ## Introduction and Acceptance of Terms
 
-Welcome to **Cross Designs**, an AI-powered platform for creating beautiful and meaningful cross artwork. By accessing or using our service, you agree to be bound by these Terms of Service. If you do not agree with any of these terms, please do not use our service.
+Welcome to **TurboLearn**, an AI-powered learning assistant for creating concise notes and clear diagrams from your study materials. By accessing or using our service, you agree to be bound by these Terms of Service. If you do not agree with any of these terms, please do not use our service.
 
 ## Use of the Service
 
-Cross Designs provides users with an AI-powered platform to create, customize, and share cross designs. You agree to use the service in accordance with all applicable local, state, national, and international laws and regulations.
+TurboLearn provides users with an AI-powered platform to create, customize, and share study notes and diagrams. You agree to use the service in accordance with all applicable local, state, national, and international laws and regulations.
 
 ## User Accounts and Registration
 
@@ -18,27 +18,27 @@ Cross Designs provides users with an AI-powered platform to create, customize, a
 
 ## Content and Intellectual Property Rights
 
-All content provided through Cross Designs, including but not limited to the AI generation system, design templates, and infrastructure setup, is protected under copyright law. The copyright owner of Cross Designs is **crossdesigns.net**.
+All content provided through TurboLearn, including but not limited to the AI generation system, note templates, diagram tools, and infrastructure setup, is protected under copyright law. The copyright owner of TurboLearn is **turbo-learn.com**.
 
-- You acknowledge that you do not own the underlying technology or intellectual property that makes up the Cross Designs service, and you agree to respect the intellectual property rights of crossdesigns.net and any third parties.
-- While you retain ownership of your custom cross designs and modifications, the core Cross Designs platform and AI technology remain the property of crossdesigns.net.
+- You acknowledge that you do not own the underlying technology or intellectual property that makes up the TurboLearn service, and you agree to respect the intellectual property rights of turbo-learn.com and any third parties.
+- While you retain ownership of your custom notes, diagrams, and modifications, the core TurboLearn platform and AI technology remain the property of turbo-learn.com.
 
 ## Prohibited Activities
 
-You agree not to engage in any of the following prohibited activities while using Cross Designs:
+You agree not to engage in any of the following prohibited activities while using TurboLearn:
 
-- Unauthorized access to or distribution of our proprietary AI technology and design templates
-- Reselling or redistributing Cross Designs generated artwork without authorization
+- Unauthorized access to or distribution of our proprietary AI technology and note templates
+- Reselling or redistributing TurboLearn generated content without authorization
 - Interfering with or disrupting the security or performance of the service
 - Using the service for any illegal or unauthorized purpose
 - Attempting to bypass any security features of the service
 
 ## Privacy and Data Collection
 
-Cross Designs collects the following types of data:
+TurboLearn collects the following types of data:
 
 - **Account Information**: Information you provide when creating an account
-- **Design Data**: Information about your cross designs and preferences
+- **Learning Materials**: Information about your uploaded study materials, notes, and diagrams
 - **Usage Details**: Data related to your activity on our service
 - **Device Information**: Information about the device you use to access our service
 - **Payment and Billing Information**: Data necessary to process payments
@@ -62,15 +62,15 @@ The service is provided on an "as is" and "as available" basis. We make no warra
 
 ## Limitation of Liability
 
-To the fullest extent permitted by law, crossdesigns.net shall not be liable for any direct, indirect, incidental, special, consequential, or punitive damages arising from the use of or inability to use the service.
+To the fullest extent permitted by law, turbo-learn.com shall not be liable for any direct, indirect, incidental, special, consequential, or punitive damages arising from the use of or inability to use the service.
 
 ## Indemnification
 
-You agree to indemnify and hold harmless crossdesigns.net, its affiliates, and their respective officers, directors, employees, and agents from any claims, damages, losses, liabilities, and expenses (including attorneys' fees) arising from your use of the service or violation of these Terms.
+You agree to indemnify and hold harmless turbo-learn.com, its affiliates, and their respective officers, directors, employees, and agents from any claims, damages, losses, liabilities, and expenses (including attorneys' fees) arising from your use of the service or violation of these Terms.
 
 ## Governing Law and Dispute Resolution
 
-These Terms shall be governed by and construed in accordance with the laws of the jurisdiction in which crossdesigns.net operates, without regard to its conflict of law provisions. Any disputes arising from these Terms or the service will be resolved through binding arbitration in accordance with applicable laws.
+These Terms shall be governed by and construed in accordance with the laws of the jurisdiction in which turbo-learn.com operates, without regard to its conflict of law provisions. Any disputes arising from these Terms or the service will be resolved through binding arbitration in accordance with applicable laws.
 
 ## Changes to These Terms
 
@@ -82,4 +82,4 @@ If you have any questions about these Terms, please contact us at [cms1892358745
 
 ---
 
-By using Cross Designs, you acknowledge that you have read, understood, and agree to be bound by these Terms of Service. Thank you for choosing Cross Designs!
+By using TurboLearn, you acknowledge that you have read, understood, and agree to be bound by these Terms of Service. Thank you for choosing TurboLearn!
