--- a/i18n/pages/landing/zh.json
+++ b/i18n/pages/landing/zh.json
@@ -584,6 +584,11 @@
               "title": "AI Logo 制作器",
               "url": "https://www.logoai.com/",
               "target": "_blank"
+            },
+            {
+              "title": "Whois",
+              "url": "https://www.qiuyumi.com/whois/?domain=turbo-learn.com",
+              "target": "_blank"
             }
           ]
         }
